<?xml version="1.0"?>
<package format="3">
  <name>ouster_description</name>
  <version>1.0.7</version>
  <description>
    URDF and meshes describing Ouster laser scanners.
  </description>

  <license>BSD</license>
  <author>Wil Selby</author>
  <maintainer email="accounts@wilselby.com">Wil Selby</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>rostest</test_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
